# cat-fax

./: Cargo.toml  LICENSE  README.md
assets/: fax.txt
src/: fax.txt  lol.rs  main.rs  window.rs
