[package]
name = "cat-fax"
version = "0.3.0"
edition = "2021"
authors = ["eric (sk3pz) skepz.dev@gmail.com"]
description = "Like Cowsay, but with factually accurate cat facts!"
license = "MIT"

[dependencies]
rand = "0.8.4"
glutin = "0.28.0"
gfx = "0.18.2"
gfx_glyph = "0.17.0"
glyph_brush = "0.7.3"
old_school_gfx_glutin_ext = "0.28.0"