[package]
name = "cat-fax"
version = "1.1.0"
edition = "2021"
authors = ["eric (sk3pz) skepz.dev@gmail.com"]
description = "Like Cowsay, but with (mostly) factually accurate cat facts!"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Sk3pz/cat-fax"
repository = "https://github.com/Sk3pz/cat-fax"

[dependencies]
rand = "0.8.5"
better_term = { version = "1.4.5", features = ["output", "fancy"] }